# CnC_Renegade

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md
Code/BandTest/: BandTest.cpp  BandTest.dsp  BandTest.dsw  BandTest.h  BandTest.rc  CMakeLists.txt  resource.h
Code/BinkMovie/: BINKMovie.cpp  BINKMovie.h  Bink.h  BinkMovie.dsp  CMakeLists.txt  ffmpeg_video.cpp  ffmpeg_video.h  subtitle.cpp  subtitle.h  subtitlemanager.cpp  subtitlemanager.h  subtitleparser.cpp  subtitleparser.h
Code/Combat/: CMakeLists.txt  CNCModeSettings.cpp  CNCModeSettings.h  Combat.dsp  SoundEnvironment.cpp  SoundEnvironment.h  WeatherMgr.cpp  WeatherMgr.h  action.cpp  action.h  activeconversation.cpp  activeconversation.h  airstripgameobj.cpp  airstripgameobj.h  animcontrol.cpp  animcontrol.h  apppackettypes.h  armedgameobj.cpp  armedgameobj.h  assetdep.cpp  assetdep.h  assets.cpp  assets.h  backgroundmgr.cpp  backgroundmgr.h  basecontroller.cpp  basecontroller.h  basegameobj.cpp  basegameobj.h  beacongameobj.cpp  beacongameobj.h  bones.cpp  bones.h  building.cpp  building.h  buildingaggregate.cpp  buildingaggregate.h  buildingmonitor.cpp  buildingmonitor.h  buildingstate.cpp  (+223 more)
Code/Commando/: AnnounceEvent.cpp  AnnounceEvent.h  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  CDKeyAuth.h  CMakeLists.txt  ConsoleMode.cpp  ConsoleMode.h  DlgDownload.cpp  DlgDownload.h  DlgMPConnect.cpp  DlgMPConnect.h  DlgMPConnectionRefused.cpp  DlgMPConnectionRefused.h  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgMessageBox.h  DlgPasswordPrompt.cpp  DlgPasswordPrompt.h  DlgQuickmatch.cpp  DlgQuickmatch.h  DlgRestart.cpp  DlgRestart.h  DlgWOLAutoStart.cpp  DlgWOLAutoStart.h  DlgWOLLogon.cpp  DlgWOLLogon.h  DlgWOLSettings.cpp  DlgWOLSettings.h  DlgWOLWait.cpp  DlgWOLWait.h  DlgWebPage.cpp  DlgWebPage.h  FirewallWait.cpp  FirewallWait.h  GameResSend.cpp  GameResSend.h  GameSpyBanList.cpp  (+396 more)
Code/SControl/: CMakeLists.txt  SControl.dsp  servercontrol.cpp  servercontrol.h  servercontrolsocket.cpp  servercontrolsocket.h
Code/Scripts/: CMakeLists.txt  Common.cpp  Common.h  CustomEvents.h  DLLmain.cpp  DPrint.cpp  DPrint.h  DrMobius.cpp  Group.cpp  Group.h  GroupControl.cpp  GroupControl.h  GroupScript.cpp  Mission00.cpp  Mission00.h  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission1.h  Mission10.cpp  Mission10.h  Mission11.cpp  Mission11.h  Mission12.h  Mission2.h  Mission3.h  Mission4.h  Mission5.h  Mission6.h  Mission7.h  Mission8.h  Mission9.h  MissionDemo.cpp  MissionS04.cpp  MissionX0.cpp  (+52 more)
Code/WWAudio/: AABTreeSoundCullClass.h  AudibleSound.cpp  AudibleSound.h  AudioEvents.cpp  AudioEvents.h  AudioSaveLoad.cpp  AudioSaveLoad.h  CMakeLists.txt  FilteredSound.cpp  FilteredSound.h  Listener.cpp  Listener.h  LogicalListener.cpp  LogicalListener.h  LogicalSound.cpp  LogicalSound.h  PriorityVector.h  Sound3D.cpp  Sound3D.h  SoundBuffer.cpp  SoundBuffer.h  SoundChunkIDs.h  SoundCullObj.h  SoundDefinition.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.cpp  SoundSceneObj.h  StaticSoundCullObj.h  Threads.cpp  Threads.h  Utils.cpp  Utils.h  WWAudio.cpp  WWAudio.dsp  WWAudio.h  listenerhandle.cpp  listenerhandle.h  (+11 more)
Code/WWMath/: CMakeLists.txt  aabox.cpp  aabox.h  aabtreecull.cpp  aabtreecull.h  aaplane.h  cardinalspline.cpp  cardinalspline.h  castres.h  catmullromspline.cpp  catmullromspline.h  colmath.cpp  colmath.h  colmathaabox.cpp  colmathaabox.h  colmathaabtri.cpp  colmathfrustum.cpp  colmathfrustum.h  colmathinlines.h  colmathline.cpp  colmathline.h  colmathobbobb.cpp  colmathobbox.cpp  colmathobbtri.cpp  colmathplane.cpp  colmathplane.h  colmathsphere.cpp  cullsys.cpp  cullsys.h  culltype.h  curve.cpp  curve.h  euler.cpp  euler.h  frustum.cpp  frustum.h  gridcull.cpp  gridcull.h  hermitespline.cpp  hermitespline.h  (+37 more)
Code/ww3d2/: CMakeLists.txt  D3D11Device.cpp  D3D11Device.h  RenderDevice.h  aabtree.cpp  aabtree.h  aabtreebuilder.cpp  aabtreebuilder.h  agg_def.cpp  agg_def.h  animatedsoundmgr.cpp  animatedsoundmgr.h  animobj.cpp  animobj.h  assetmgr.cpp  assetmgr.h  assetstatus.cpp  assetstatus.h  bitmaphandler.cpp  bitmaphandler.h  bmp2d.cpp  bmp2d.h  boxrobj.cpp  boxrobj.h  bwrender.cpp  bwrender.h  camera.cpp  camera.h  collect.cpp  collect.h  colorspace.h  coltest.cpp  coltest.h  coltype.h  composite.cpp  composite.h  dazzle.cpp  dazzle.h  ddsfile.cpp  ddsfile.h  (+189 more)
Code/wwbitpack/: BitPacker.cpp  BitPacker.h  CMakeLists.txt  bitpackids.h  bitstream.cpp  bitstream.h  encoderlist.cpp  encoderlist.h  encodertypeentry.cpp  encodertypeentry.h  wwbitpack.dsp
Code/wwdebug/: CMakeLists.txt  dspmake.cfg  wwdebug.cpp  wwdebug.dsp  wwdebug.h  wwhack.h  wwmemlog.cpp  wwmemlog.h  wwprofile.cpp  wwprofile.h
Code/wwlib/: CMakeLists.txt  CallbackHook.h  Except.cpp  Except.h  FastAllocator.cpp  FastAllocator.h  LaunchWeb.cpp  LaunchWeb.h  Notify.h  Signaler.h  TARGA.CPP  TARGA.H  WWCOMUtil.cpp  WWCOMUtil.h  _convert.cpp  _convert.h  _mono.cpp  _mono.h  _timer.cpp  _timer.h  _xmouse.h  argv.cpp  argv.h  b64pipe.cpp  b64pipe.h  b64straw.cpp  b64straw.h  base64.cpp  base64.h  binheap.h  bittype.h  blit.cpp  blit.h  blitblit.h  blitter.h  blowfish.cpp  blowfish.h  blowpipe.cpp  blowpipe.h  blwstraw.cpp  (+214 more)
Code/wwnet/: BWBalance.cpp  BWBalance.h  CMakeLists.txt  connect.cpp  connect.h  fromaddress.h  lan.cpp  msgstat.cpp  msgstat.h  msgstatlist.cpp  msgstatlist.h  msgstatlistgroup.cpp  msgstatlistgroup.h  netstats.cpp  netstats.h  netutil.cpp  netutil.h  networkobject.cpp  networkobject.h  networkobjectfactory.cpp  networkobjectfactory.h  networkobjectfactorymgr.cpp  networkobjectfactorymgr.h  networkobjectmgr.cpp  networkobjectmgr.h  packetmgr.cpp  packetmgr.h  packettype.h  rhost.cpp  rhost.h  singlepl.cpp  singlepl.h  wwnet.dsp  wwpacket.cpp  wwpacket.h
Code/wwphys/: CMakeLists.txt  Path.cpp  Path.h  PathDebugPlotter.cpp  PathDebugPlotter.h  PathNode.h  PathObject.cpp  PathObject.h  Pathfind.cpp  Pathfind.h  PathfindPortal.cpp  PathfindPortal.h  PathfindSector.cpp  PathfindSector.h  bin_aabox.cpp  (+182 more)
(+1640 files in other folders)
